--- a/index.html
+++ b/index.html
@@ -1,12 +1,329 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Uzman Masahir</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <script
+      src="https://kit.fontawesome.com/83ac4612b7.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <section id="about-me">
+      <nav>
+        <div class="personal__logo">Uzman Masahir</div>
+        <ul class="nav__link--list">
+          <li class="nav__link">
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Languages</a
+            >
+          </li>
+          <li class="nav__link">
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Projects</a
+            >
+          </li>
+          <li class="nav__link">
+            <a href="" class="nav__link--anchor nav__link--anchor-primary"
+              >Contact</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <div class="flex flex-1">
+        <div class="about-me__info row">
+          <div class="about-me__info--container">
+            <figure class="about-me__picture--mask">
+              <img src="assets/logo.png" class="about-me__picture" />
+            </figure>
+            <h1 class="about-me__info--title">
+              Hey! I'm <span class="text--purple"> Uzman Masahir</span>
+            </h1>
+            <p class="about-me__info--para">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repudiandae dicta modi debitis maxime, nihil harum sed doloremque
+              tempore eveniet ab, suscipit iusto facere.
+            </p>
+            <div class="about-me--links">
+              <a href="" class="about-me--link"
+                ><i class="fa-brands fa-linkedin-in"></i
+              ></a>
+
+              <a href="" class="about-me--link"
+                ><i class="fa-brands fa-github"></i
+              ></a>
+
+              <a href="" class="about-me--link"
+                ><i class="fa-solid fa-envelope"></i
+              ></a>
+
+              <a href="" class="about-me--link"
+                ><i class="fa-solid fa-file-pdf"></i
+              ></a>
+            </div>
+            <div>
+              <figure class="about-me__img--container">
+                <img src="./assets/undraw_websites.svg" class="about-me__img" />
+              </figure>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Tech stack -->
+
+    <section id="languages">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            This is my<span class="text--purple"> technology stack</span>
+          </h1>
+          <div class="language__list">
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  class="language__img"
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                />
+              </figure>
+              <span class="language__name">HTML</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  class="language__img"
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                />
+              </figure>
+              <span class="language__name">HTML</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  class="language__img"
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                />
+              </figure>
+              <span class="language__name">HTML</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  class="language__img"
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                />
+              </figure>
+              <span class="language__name">HTML</span>
+            </div>
+
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  class="language__img"
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                />
+              </figure>
+              <span class="language__name">HTML</span>
+            </div>
+
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  class="language__img"
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                />
+              </figure>
+              <span class="language__name">HTML</span>
+            </div>
+
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  class="language__img"
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                />
+              </figure>
+              <span class="language__name">HTML</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  class="language__img"
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                />
+              </figure>
+              <span class="language__name">HTML</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Projects -->
+    <section id="projects">
+      <div class="container">
+        <div class="row">
+          <h1>
+            Here are some of my <span class="text--purple">Projects</span>
+          </h1>
+          <ul class="project__list">
+            <li class="project">
+              <div class="project__wrapper">
+                <img class="project__img" src="./assets/loopit.png" alt="" />
+                <div class="project__description">
+                  <h3 class="project__description--title">Car sales project</h3>
+                  <h4 class="project__description--subtitle">
+                    HTML, CSS, JS, Vue
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Impedit totam, facere pariatur dolorum magnam eos tenetur
+                    suscipit sapiente cum? Ipsam at ab sit cumque recusandae
+                    quos accusamus in nulla placeat.
+                  </p>
+                  <div class="project__description--links">
+                    <a
+                      href="https://github.com/"
+                      class="project__description--link"
+                      target="_blank"
+                    >
+                      ><i class="fa-brands fa-github"></i>
+                    </a>
+                    <a
+                      href="https://github.com/"
+                      class="project__description--link"
+                      target="_blank"
+                    >
+                      ><i class="fa-brands fa-github"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img class="project__img" src="./assets/loopit.png" alt="" />
+                <div class="project__description">
+                  <h3 class="project__description--title">Car sales project</h3>
+                  <h4 class="project__description--subtitle">
+                    HTML, CSS, JS, Vue
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Impedit totam, facere pariatur dolorum magnam eos tenetur
+                    suscipit sapiente cum? Ipsam at ab sit cumque recusandae
+                    quos accusamus in nulla placeat.
+                  </p>
+                  <div class="project__description--links">
+                    <a
+                      href="https://github.com/"
+                      class="project__description--link"
+                      target="_blank"
+                    >
+                      ><i class="fa-brands fa-github"></i>
+                    </a>
+                    <a
+                      href="https;//www.github.com"
+                      class="project__description--link"
+                      target="_blank"
+                    >
+                      ><i class="fa-brands fa-github"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img class="project__img" src="./assets/loopit.png" alt="" />
+                <div class="project__description">
+                  <h3 class="project__description--title">Car sales project</h3>
+                  <h4 class="project__description--subtitle">
+                    HTML, CSS, JS, Vue
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Impedit totam, facere pariatur dolorum magnam eos tenetur
+                    suscipit sapiente cum? Ipsam at ab sit cumque recusandae
+                    quos accusamus in nulla placeat.
+                  </p>
+                  <div class="project__description--links">
+                    <a
+                      href="https://github.com/"
+                      class="project__description--link"
+                      target="_blank"
+                    >
+                      ><i class="fa-brands fa-github"></i>
+                    </a>
+                    <a
+                      href="https://github.com/"
+                      class="project__description--link"
+                      target="_blank"
+                    >
+                      ><i class="fa-brands fa-github"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="row footer__row">
+        <a href="#" class="footer__anchor">
+          <figure class="footer__logo">
+            <img src="./assets/logo.png" class="footer__logo--img" />
+          </figure>
+          <span class="footer__logo--popper">Top
+            <i class="fas fa-arrow-up"></i>
+          </span>
+        </a>
+        <div class="footer__social--list">
+          <a
+            href="https://google.com"
+            class="footer__social--link"
+            class="link__hover-effect"
+            class="link__hover-effect--white"
+            target="_blank"
+            >Github</a
+          >
+          <a
+            href="https://google.com"
+            class="footer__social--link"
+            class="link__hover-effect"
+            class="link__hover-effect--white"
+            target="_blank"
+            >LinkedIn</a
+          >
+          <a
+            href="mailto: uzman.m786@gmail.com"
+            class="footer__social--link"
+            class="link__hover-effect"
+            class="link__hover-effect--white"
+            target="_blank"
+            >Email</a
+          >
+          <a
+            href=""
+            class="footer__social--link"
+            class="link__hover-effect"
+            class="link__hover-effect--white"
+            target="_blank"
+            >Resume</a
+          >
+        </div>
+        <div class="footer__copyright">Copyright C 2022 Uzman Masahir</div>
+      </div>
+    </footer>
+  </body>
 </html>
